[project]
name = "llm-radar"
version = "0.1.0"
description = "A live, auto-updating dashboard of the LLM landscape (pricing, context, capabilities) — data from the OpenRouter API."
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32",
    "pandas>=2.2",
    "great-tables>=0.20",
    "jupyter>=1.1",
]

[tool.setuptools]
packages = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
